--- a/yew-app/index.scss
+++ b/yew-app/index.scss
@@ -2,11 +2,11 @@ button {
     background-color: #008f53; /* Green */
     border: 0;
     color: white;
-    padding: 14px 14px;
+    padding: 4px 4px;
     text-align: center;
-    font-size: 16px;
+    font-size: 6px;
     margin: 2px 2px;
-    width: 100px;
+    width: 50px;
   }
 
   .counter {
@@ -20,7 +20,14 @@ button {
       font-size: 12px;
   }
 
-  .panel {
-    display: flex;
-    justify-content: center;
+  .button_panel {
+    float: left
   }
+
+  .score_panel {
+    float: right
+  }
+
+table, th, td {
+  border:1px solid black;
+}
